Lots and lots of stuff

--- a/manuscript/thesis.bib
+++ b/manuscript/thesis.bib
@@ -1,3 +1,19 @@
+@article{Adams+1993,
+  title = {Natural inflation: Particle physics models, power-law spectra for large-scale structure, and constraints from the Cosmic Background Explorer},
+  author = {Adams, Fred C. and Bond, J. Richard and Freese, Katherine and Frieman, Joshua A. and Olinto, Angela V.},
+  journal = {Phys. Rev. D},
+  volume = {47},
+  issue = {2},
+  pages = {426--455},
+  numpages = {0},
+  year = {1993},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.47.426},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.47.426}
+}
+
+
 @article{Albrecht+Steinhardt1982,
   title = {Cosmology for Grand Unified Theories with Radiatively Induced Symmetry Breaking},
   author = {Albrecht, Andreas and Steinhardt, Paul J.},
@@ -11,6 +27,17 @@
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.48.1220},
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.48.1220}
+}
+
+@ARTICLE{Boubekeur+Lyth2005,
+  author={Lotfi Boubekeur and David H Lyth},
+  title={Hilltop inflation},
+  journal={Journal of Cosmology and Astroparticle Physics},
+  volume={2005},
+  number={07},
+  pages={010},
+  url={http://stacks.iop.org/1475-7516/2005/i=07/a=010},
+  year={2005},
 }
 
 
@@ -27,6 +54,60 @@
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.96.111301},
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.96.111301}
+}
+
+@ARTICLE{Dvali+1994,
+   author = {{Dvali}, G. and {Shafi}, Q. and {Schaefer}, R.},
+    title = "{Large scale structure and supersymmetric inflation without fine tuning}",
+  journal = {Physical Review Letters},
+   eprint = {hep-ph/9406319},
+ keywords = {Particle-theory and field-theory models of the early Universe, Unified theories and models of strong and electroweak interactions, Supersymmetric models, Superclusters, large-scale structure of the Universe},
+     year = 1994,
+    month = oct,
+   volume = 73,
+    pages = {1886-1889},
+      doi = {10.1103/PhysRevLett.73.1886},
+   adsurl = {http://adsabs.harvard.edu/abs/1994PhRvL..73.1886D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Dvali+Tye1999,
+   author = {{Dvali}, G. and {Tye}, S.-H.~H.},
+    title = "{Brane inflation}",
+  journal = {Physics Letters B},
+   eprint = {hep-ph/9812483},
+     year = 1999,
+    month = mar,
+   volume = 450,
+    pages = {72-82},
+      doi = {10.1016/S0370-2693(99)00132-X},
+   adsurl = {http://adsabs.harvard.edu/abs/1999PhLB..450...72D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Garcia+2002,
+   author = {{Garc{\'{\i}}a-Bellido}, J. and {Rabad{\'a}n}, R. and {Zamora}, F.
+	},
+    title = "{Inflationary scenarios from branes at angles}",
+  journal = {Journal of High Energy Physics},
+   eprint = {hep-th/0112147},
+     year = 2002,
+    month = jan,
+   volume = 1,
+      eid = {036},
+    pages = {36},
+      doi = {10.1088/1126-6708/2002/01/036},
+   adsurl = {http://adsabs.harvard.edu/abs/2002JHEP...01..036G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Goncharov+Linde1984,
+  title={Chaotic inflation of the Universe in supergravity},
+  author={Goncharov, AS and Linde, AD},
+  journal={Zh. Eksp. Teor. Fiz},
+  volume={86},
+  pages={1594--1599},
+  year={1984}
 }
 
 @article{Guth1981,
@@ -57,6 +138,54 @@ doi = "http://dx.doi.org/10.1016/0550-3213(83)90307-3",
 url = "http://www.sciencedirect.com/science/article/pii/0550321383903073",
 author = "Alan H. Guth and Erick J. Weinberg"
 }
+
+@ARTICLE{Kallosh+2013,
+   author = {{Kallosh}, R. and {Linde}, A. and {Roest}, D.},
+    title = "{Superconformal inflationary {$\alpha$}-attractors}",
+  journal = {Journal of High Energy Physics},
+archivePrefix = "arXiv",
+   eprint = {1311.0472},
+ primaryClass = "hep-th",
+ keywords = {Supergravity Models, Supersymmetry Breaking},
+     year = 2013,
+    month = nov,
+   volume = 11,
+      eid = {198},
+    pages = {198},
+      doi = {10.1007/JHEP11(2013)198},
+   adsurl = {http://adsabs.harvard.edu/abs/2013JHEP...11..198K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Linde1983,
+title = "Chaotic inflation ",
+journal = "Physics Letters B ",
+volume = "129",
+number = "3–4",
+pages = "177 - 181",
+year = "1983",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/0370-2693(83)90837-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370269383908377",
+author = "A.D. Linde"
+}
+
+@article{Linde+1994,
+  title = {From the big bang theory to the theory of a stationary universe},
+  author = {Linde, Andrei and Linde, Dmitri and Mezhlumian, Arthur},
+  journal = {Phys. Rev. D},
+  volume = {49},
+  issue = {4},
+  pages = {1783--1826},
+  numpages = {0},
+  year = {1994},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.49.1783},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.49.1783}
+}
+
 
 @article{Linde2000,
 title = "Inflationary cosmology ",
@@ -99,6 +228,52 @@ keywords = "Preheating "
 	volume = 571,
 	pages = "A22",
 	month = "",
+}
+
+@ARTICLE{Planck2015,
+   author = {{Planck Collaboration} and {Ade}, P.~A.~R. and {Aghanim}, N. and 
+	{Arnaud}, M. and {Arroja}, F. and {Ashdown}, M. and {Aumont}, J. and 
+	{Baccigalupi}, C. and {Ballardini}, M. and {Banday}, A.~J. and et al.},
+    title = "{Planck 2015 results. XX. Constraints on inflation}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1502.02114},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2015,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150202114P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bezrukov+Shaposhnikov2008,
+   author = {{Bezrukov}, F. and {Shaposhnikov}, M.},
+    title = "{The Standard Model Higgs boson as the inflaton}",
+  journal = {Physics Letters B},
+archivePrefix = "arXiv",
+   eprint = {0710.3755},
+ primaryClass = "hep-th",
+ keywords = {Particle-theory and field-theory models of the early Universe, Standard-model Higgs bosons},
+     year = 2008,
+    month = jan,
+   volume = 659,
+    pages = {703-706},
+      doi = {10.1016/j.physletb.2007.11.072},
+   adsurl = {http://adsabs.harvard.edu/abs/2008PhLB..659..703B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Starobinsky1980,
+title = "A new type of isotropic cosmological models without singularity ",
+journal = "Physics Letters B ",
+volume = "91",
+number = "1",
+pages = "99 - 102",
+year = "1980",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/0370-2693(80)90670-X",
+url = "http://www.sciencedirect.com/science/article/pii/037026938090670X",
+author = "A.A. Starobinsky"
 }
 
 
